--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 #changeButton {
     padding: auto;
     font-size: 16px;
-    background-color: black;
-    color: red;
+    background-color: cornsilk;
+    color: lightsteelblue;
     border: none;
     cursor: pointer;
     border-radius: 5px;
