--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 body {
     background-color: Cornsilk;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .container {
@@ -13,17 +10,18 @@ body {
 
 
 #mainImage {
-    width: auto;
-    height: 300px;
+    width: 500px;
+    height: 600px;
     margin-bottom: auto;
 }
 
 #changeButton {
     padding: auto;
-    font-size: 16px;
+    font-size: 20px;
+    font-family: garamond;
     background-color: cornsilk;
     color: lightsteelblue;
-    border: none;
+    border: 2px solid powderblue;
     cursor: pointer;
     border-radius: 5px;
 }
