--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: Cornsilk;
+    background-color: bisque;
 }
 
 .container {
@@ -17,11 +17,11 @@ body {
 
 #changeButton {
     padding: auto;
-    font-size: 30px;
+    font-size: 20px;
     font-family: garamond;
-    background-color: cornsilk;
+    background-color: bisque;
     color: black;
-    border: 5px solid black;
+    border: 3px solid black;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 3px;
 }
