--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: linen;
+    background-color: cornsilk;
 }
 
 .container {
@@ -17,9 +17,9 @@ body {
 
 #changeButton {
     padding: auto;
-    font-size: 30px;
+    font-size: 20px;
     font-family: garamond;
-    background-color: linen;
+    background-color: cornsilk;
     color: black;
     border: 3px solid black;
     cursor: pointer;
