--- a/style.css
+++ b/style.css
@@ -25,3 +25,14 @@ body {
     cursor: pointer;
     border-radius: 3px;
 }
+
+#changeBackgroundButton {
+    padding: auto;
+    font-size: 20px;
+    font-family: garamond;
+    background-color: cornsilk;
+    color: black;
+    border: 3px solid black;
+    cursor: pointer;
+    border-radius: 3px;
+}
